# base-django

./: .gitignore  manage.py  pyproject.toml
deploy/: Dockerfile
deploy/nginx/: nginx.conf
deploy/server/: run.sh  uwsgi.ini
spelling/: settings.py  urls.py  wsgi.py
src/: wsgi.py
src/settings/: __init__.py
src/settings/components/: auth.py  i18n.py  paths.py  static.py  templates.py
src/settings/environments/: dev.template  production.py
src/spelling/: settings.py
