[tool.poetry]
name = "spelling"
version = "0.1.0"
description = ""
authors = ["Vladimir Nosov"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^2.2"
django-split-settings = "^1.0"
psycopg2 = "^2.8"
python-decouple = "^3.1"
uwsgi = "^2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
